# podman-runner

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
examples/: basic_container.py  health_check.py  init_scripts.py  port_mapping.py  test.py  volume_mounts.py
src/podman_py/: core.py  helpers.py  preflight.py
src/podman_runner/: __init__.py  core.py  helpers.py  preflight.py
tests/: conftest.py  test_container.py
tests/integration/: test_container.py  test_examples_run_successfully.py
tests/unit/: test_core.py  test_core_mocked.py  test_helpers.py  test_init.py  test_preflight.py
