[project]
name = "podman-py"
version = "0.1.0"
description = "Generic Podman container runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "François Naggar-Tremblay", email = "francois.n.tremblay@gmail.com" },
]
keywords = ["pytest", "podman", "testing", "containers"]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pre-commit>=4.1.0",
    "pytest>=8.4.1",
    "pytest-cov==6.2.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
    "ruff==0.12.10",
    "taskipy>=1.14.1",
    "toml>=0.10.2",
    "types-requests>=2.32.4.20250913",
    "types-toml>=0.10.8.20240310",
]


[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "D", "RUF", "UP", "S", "T10", "T20"]
ignore = ["D100", "D104"]
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T201", "S602", "D101", "E501", "D103"]
"examples/*" = ["T201"]

[tool.uv.workspace]
members = ["."]

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["src"]
addopts = "--cov=podman_py --cov-report=term-missing -n auto --dist=loadscope"

[tool.mypy]
files = ["src", "tests", "examples"]
warn_unused_configs = true
strict = true

[tool.taskipy.tasks]
unittest = "pytest tests/unit "
integrationtest = "pytest tests/integration"
